// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Frontend.Project.Detail component renders correctly 1`] = `
<div>
  <div
    className="project-detail-hero"
    style={Object {}}
  >
    <div
      className="container"
    >
      <div
        className="project-figure"
      >
        
        <div
          className="project-figure-caption"
        >
          <h1
            className="project-title"
          >
            <span
              className="title-text"
            >
              Rowan Test
            </span>
            <span
              className="subtitle"
            >
              World's Greatest Dog
            </span>
          </h1>
          <section
            className="project-maker"
          />
        </div>
      </div>
      <div
        className="project-info"
      >
        <h1
          className="project-title"
        >
          <span
            className="title-text"
          >
            Rowan Test
          </span>
          <span
            className="subtitle"
          >
            World's Greatest Dog
          </span>
        </h1>
        <section
          className="project-maker"
        />
        <section
          className="project-social"
        >
          <nav
            className="networks"
          >
            <ul />
          </nav>
          <span
            className="hashtag"
          >
            ##cute_dog
          </span>
        </section>
      </div>
      <div
        className="project-aside"
      >
        
      </div>
    </div>
  </div>
  <section>
    <div
      className="container"
    >
      <header
        className="section-heading"
      >
        <div
          className="main"
        >
          <i
            className="manicon manicon-pulse"
          />
          <div
            className="body"
          >
            <h4
              className="title"
            >
              Recent Activity
            </h4>
          </div>
        </div>
        <div
          className="hide-60"
        >
          <div
            className="utility right"
          >
            <a
              className="button-primary"
              href="/project/slug-1/events"
              onClick={[Function]}
            >
              See all Activity
            </a>
          </div>
        </div>
        <div
          className="show-60"
        >
          <div
            className="utility right"
          >
            <a
              className="button-primary"
              href="/project/slug-1/events"
              onClick={[Function]}
            >
              See all Activity
            </a>
          </div>
        </div>
      </header>
      <div>
        <ul
          className="event-list-secondary"
        >
          <li
            className=""
          >
            <div
              className="event-tile"
            >
              <div
                className="event-data"
              >
                <div>
                  <i
                    className="manicon manicon-book-opening"
                  />
                  <h5
                    className="event-title"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "New Text",
                      }
                    }
                  />
                  <span
                    className="event-date"
                  >
                    <span>
                      Text Added April 24th, 2017
                    </span>
                  </span>
                </div>
              </div>
              <div
                className="event-prompt"
              >
                <a
                  href="/read/subject-slug"
                  onClick={[Function]}
                >
                  Start Reading
                  <i
                    className="manicon manicon-arrow-long-right"
                  />
                </a>
              </div>
            </div>
          </li>
          <li
            className=""
          >
            <div
              className="event-tile tweet"
            >
              <div
                className="event-data"
              >
                <div>
                  <i
                    className="manicon manicon-twitter"
                  />
                  <div
                    className="event-user"
                  >
                    <a
                      href="https://twitter.com/ManifoldScholar"
                      target="_blank"
                    >
                      @ManifoldScholar
                    </a>
                  </div>
                  <div
                    className="event-content"
                  >
                    <p
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "Manifold is great!",
                        }
                      }
                    />
                  </div>
                  <span
                    className="event-date"
                  >
                    <span>
                      April 24th, 2017
                    </span>
                  </span>
                </div>
              </div>
              <div
                className="event-prompt"
              />
            </div>
          </li>
        </ul>
      </div>
    </div>
  </section>
  <section>
    <div
      className="container flush-top"
    >
      <header
        className="section-heading"
      >
        <div
          className="main"
        >
          <i
            className="manicon manicon-tag"
          />
          <div
            className="body"
          >
            <h4
              className="title"
            >
              About
            </h4>
          </div>
        </div>
      </header>
      <ul
        className="meta-list-primary"
      />
      <ul
        className="meta-list-primary columnar"
      >
        <li>
          <span
            className="meta-label"
          >
            doi
          </span>
          <div
            className="meta-value"
          >
            <a
              href="https://doi.org/10.12345.6789"
              target="_blank"
            >
              https://doi.org/10.12345.6789
            </a>
          </div>
        </li>
      </ul>
    </div>
  </section>
  <section
    className="bg-neutral05"
  >
    <div
      className="container"
    >
      <nav
        className="button-nav"
      >
        <a
          className="button-icon-primary"
          href="/"
          onClick={[Function]}
        >
          <span>
            <i
              className="manicon manicon-books-on-shelf"
            />
            See more projects
          </span>
        </a>
      </nav>
    </div>
  </section>
</div>
`;

exports[`Frontend.Project.Detail component renders correctly when hideActivity is true 1`] = `
<div>
  <div
    className="project-detail-hero"
    style={Object {}}
  >
    <div
      className="container"
    >
      <div
        className="project-figure"
      >
        
        <div
          className="project-figure-caption"
        >
          <h1
            className="project-title"
          >
            <span
              className="title-text"
            >
              Rowan Test
            </span>
            <span
              className="subtitle"
            >
              World's Greatest Dog
            </span>
          </h1>
          <section
            className="project-maker"
          />
        </div>
      </div>
      <div
        className="project-info"
      >
        <h1
          className="project-title"
        >
          <span
            className="title-text"
          >
            Rowan Test
          </span>
          <span
            className="subtitle"
          >
            World's Greatest Dog
          </span>
        </h1>
        <section
          className="project-maker"
        />
        <section
          className="project-social"
        >
          <nav
            className="networks"
          >
            <ul />
          </nav>
          <span
            className="hashtag"
          >
            ##cute_dog
          </span>
        </section>
      </div>
      <div
        className="project-aside"
      >
        
      </div>
    </div>
  </div>
  <section>
    <div
      className="container flush-top"
    >
      <header
        className="section-heading"
      >
        <div
          className="main"
        >
          <i
            className="manicon manicon-tag"
          />
          <div
            className="body"
          >
            <h4
              className="title"
            >
              About
            </h4>
          </div>
        </div>
      </header>
      <ul
        className="meta-list-primary"
      />
      <ul
        className="meta-list-primary columnar"
      >
        <li>
          <span
            className="meta-label"
          >
            doi
          </span>
          <div
            className="meta-value"
          >
            <a
              href="https://doi.org/10.12345.6789"
              target="_blank"
            >
              https://doi.org/10.12345.6789
            </a>
          </div>
        </li>
      </ul>
    </div>
  </section>
  <section
    className="bg-neutral05"
  >
    <div
      className="container"
    >
      <nav
        className="button-nav"
      >
        <a
          className="button-icon-primary"
          href="/"
          onClick={[Function]}
        >
          <span>
            <i
              className="manicon manicon-books-on-shelf"
            />
            See more projects
          </span>
        </a>
      </nav>
    </div>
  </section>
</div>
`;
